# LoggerChroniclesClient

./: .gitignore  pyproject.toml
src/LoggerChroniclesClient/: client.py
src/loggerChroniclesClient/: __init__.py  client.py
