[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LoggerChroniclesClient"
version = "1.3.0"
authors = [
  { name="imgitmen", email="it.smi@socotec.com" },
]
description = "Python client to connect to Logger Chronicles Api"
readme = "README.md"
requires-python = ">=3.10.0"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "aiohttp", 
    "requests"
]

[project.urls]
Homepage = "https://github.com/imgitmen/LoggerChroniclesClient"